// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Page
  title={
    <FormattedMessage
      defaultMessage="Allowed methods"
      id="dapps.methods.title"
      values={Object {}}
    />
  }
>
  <CardGroup
    stackable={true}
  >
    <DappCard
      dapp={
        Object {
          "id": "123",
          "name": "123",
        }
      }
      dappsPermissionsStore={
        DappsPermissionsStore {
          "_api": Object {
            "shell": Object {
              "getApps": [Function],
              "getMethodPermissions": [Function],
              "setMethodPermissions": [Function],
            },
          },
          "addAppPermission": [Function],
          "error": null,
          "hasAppPermission": [Function],
          "loadPermissions": [Function],
          "permissions": Object {
            "shell_loadApp:123": true,
          },
          "removeAppPermission": [Function],
          "savePermissions": [Function],
        }
      }
      editingMode={false}
      key="0"
      onEdit={[Function]}
      onToggle={[Function]}
    />
    <DappCard
      dapp={
        Object {
          "id": "456",
          "name": "456",
        }
      }
      dappsPermissionsStore={
        DappsPermissionsStore {
          "_api": Object {
            "shell": Object {
              "getApps": [Function],
              "getMethodPermissions": [Function],
              "setMethodPermissions": [Function],
            },
          },
          "addAppPermission": [Function],
          "error": null,
          "hasAppPermission": [Function],
          "loadPermissions": [Function],
          "permissions": Object {
            "shell_loadApp:123": true,
          },
          "removeAppPermission": [Function],
          "savePermissions": [Function],
        }
      }
      editingMode={false}
      key="1"
      onEdit={[Function]}
      onToggle={[Function]}
    />
  </CardGroup>
</Page>
`;

exports[`should render correctly when a dapp is selected 1`] = `
<Page
  title={
    <FormattedMessage
      defaultMessage="Allowed methods"
      id="dapps.methods.title"
      values={Object {}}
    />
  }
>
  <CardGroup
    stackable={true}
  >
    <DappCard
      dapp={
        Object {
          "id": "123",
          "name": "123",
        }
      }
      dappsPermissionsStore={
        DappsPermissionsStore {
          "_api": Object {
            "shell": Object {
              "getApps": [Function],
              "getMethodPermissions": [Function],
              "setMethodPermissions": [Function],
            },
          },
          "addAppPermission": [Function],
          "error": null,
          "hasAppPermission": [Function],
          "loadPermissions": [Function],
          "permissions": Object {
            "shell_loadApp:123": true,
          },
          "removeAppPermission": [Function],
          "savePermissions": [Function],
        }
      }
      editingMode={false}
      key="0"
      onEdit={[Function]}
      onToggle={[Function]}
    />
    <DappCard
      dapp={
        Object {
          "id": "456",
          "name": "456",
        }
      }
      dappsPermissionsStore={
        DappsPermissionsStore {
          "_api": Object {
            "shell": Object {
              "getApps": [Function],
              "getMethodPermissions": [Function],
              "setMethodPermissions": [Function],
            },
          },
          "addAppPermission": [Function],
          "error": null,
          "hasAppPermission": [Function],
          "loadPermissions": [Function],
          "permissions": Object {
            "shell_loadApp:123": true,
          },
          "removeAppPermission": [Function],
          "savePermissions": [Function],
        }
      }
      editingMode={true}
      key="1"
      onEdit={[Function]}
      onToggle={[Function]}
    />
  </CardGroup>
</Page>
`;
